# HeLLMholtz

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  benchmark_report.html  comprehensive_benchmark_report.html  final_report.html  mkdocs.yml  models_status.yaml  poetry.toml  prompts.txt  pyproject.toml  report.html  test_report.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: release.yml
.github/workflows/: README.md  benchmark.yml  code-quality.yml  daily-model-check.yml  pre-commit.yml  publish.yml  release.yml  test.yml  weekly-benchmark.yml
docker/: .env.example  docker-compose.yml
docs/: agent.md  configuration.md  index.md  installation.md  models.md  monitoring.md  publishing.md  usage.md
examples/: README.md  agent_calculator.py  agent_files.py  custom_tool.py
reports/: benchmark_report.md  model_availability_report_20260318_132532.txt  model_availability_report_20260318_133318.txt
reports/html/: benchmark_report_html-detailed_2025-12-15T15-25-43-311462.html  benchmark_report_html-full_2025-12-15T15-25-43-311462.html  benchmark_report_html-simple_2025-12-15T15-25-43-311462.html
results/: benchmark_2025-12-14T16-52-56.380779.json  benchmark_2025-12-14T22-16-39.418037.json  benchmark_2025-12-14T22-19-44.393333.json  benchmark_2025-12-14T22-23-15.168681.json  benchmark_2025-12-14T22-47-00.033483.json  benchmark_2025-12-14T23-01-00.481958.json  benchmark_2025-12-14T23-01-35.534582.json  benchmark_2025-12-14T23-01-54.858631.json  benchmark_2025-12-14T23-02-17.301927.json  benchmark_2025-12-14T23-03-19.874440.json  benchmark_2025-12-14T23-29-06.709303.json  benchmark_2025-12-15T14-57-42.963915.json  benchmark_2025-12-15T15-24-51.378316.json  benchmark_2025-12-15T15-25-43.311462.json  benchmark_2025-12-16T15-25-06.453707.json
scripts/: bench_blablador.py  compare_models.py  generate_chart.py  generate_comprehensive_report.py
src/hellmholtz/: __init__.py  benchmark.py  cli.py  client.py  evaluation_analysis.py  export.py  monitoring.py  reporting.py
src/hellmholtz/agent/: __init__.py  agent.py
src/hellmholtz/agent/tools/: __init__.py  base.py  calculator.py  file_io.py  search.py
src/hellmholtz/benchmark/: __init__.py  evaluator.py  prompts.json  prompts.py  prompts.txt  runner.py
src/hellmholtz/cli/: __init__.py  benchmark.py  chat.py  common.py  integrations.py  models.py  rag.py
src/hellmholtz/core/: __init__.py  config.py  prompts.py
src/hellmholtz/integrations/: anythingllm.py  litellm.py  lm_eval.py
src/hellmholtz/providers/: blablador.py  blablador_config.py  blablador_provider.py
src/hellmholtz/rag/: __init__.py  loader.py  pipeline.py  store.py
src/hellmholtz/reporting/: __init__.py  chart.py  html.py  markdown.py  stats.py  utils.py
src/hellmholtz/reporting/templates/: detailed.html  simple.html
tests/: test_agent.py  test_agent_tools.py  test_anythingllm.py  test_benchmark.py  test_cli.py  test_cli_modules.py  test_client.py  test_config.py  test_evaluation_analysis.py  test_export.py  test_integrations.py  test_monitoring.py  test_prompts.py  test_providers.py  test_rag.py  test_reporting.py  test_throughput.py  test_token_limits.py
